2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matwey V. Kornilov:
	bug #58495: Add atmega324pb support to avrdude.conf.in
	* avrdude.conf.in (ATmega324PB): new entry

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55734: USBtiny programming of ATmega328p broken by Patch #9278
	* usbtiny.c (usbtiny_initialize): undo change from patch #9728

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55009: no efuses for m164a/pa
	* avrdude.conf.in (ATmega164P): derive from ATmega324P

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by evan Venn:
	bug #59227: Add new part. How does one get a part added to the CONF file?
	* avrdude.conf.in (LGT8FX88P, LGT8FX168P, LGT8FX328P): new parts

2021-11-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Britton Kerin:
	bug #57453: [PATCH] fix reference to nonexistant -m option by changing to -U
	* avrdude.1: replace -m option by -U

2021-11-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andrew D'Addesio:
	bug #58078: [PATCH] buspirate: remove compound literals (fixes GCC>=9)
	* buspirate.c (buspirate_start_mode_bin):
	avoid propagating local scope compound literals

2021-11-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud:
	patch #10000: Add support for extended UPDI device context
	* avrdude.conf.in (pickit4_updi, snap_updi, pkobn_updi):
	new programmers
	* avrdude.conf.in (ATmega808, ATmega809, ATmega1608, ATmega1609)
	(AVR DA, AVR DB): new devices
	* jtag3.c: Add support for extended UPDI device context
	* jtag3_private.h: (Dito.)
	* tools/atdf-to-avrdude.xslt: Bug fixes
	* usbdevs.h: Bump USBDEV_MAX_XFER_3 to 912
	* doc/avrdude.texi: Document changes
	* avrdude.1: (Dito)

2021-06-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #60753: Patch #1436 breaks multiple programmer/device combinations on MacOS BigSur
	* avr.c: compare page_size > 1 instead of != 0
	* stk500v2.c: (Ditto.)

2021-06-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
