@@ -63,6 +63,7 @@ Current:
     bug #55009: no efuses for m164a/pa
     bug #55734: USBtiny programming of ATmega328p broken by Patch #9278
     bug #58495: Add atmega324pb support to avrdude.conf.in
+    bug #60863: avrftdi programming error probably caused by multiple, consecutive empty pages
 
   * Patches:
     patch #9482: Add support for UPDI and AVR8X
